tests/baselines/reference/parserES5ForOfStatement6.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement6.ts(1,17): error TS1188: Only a single variable declaration is allowed in a 'for...of' statement.


==== tests/cases/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement6.ts (1 errors) ====
    for (var a = 1, b = 2 of X) {
                    ~
!!! error TS1188: Only a single variable declaration is allowed in a 'for...of' statement.
    }